--- a/DCVExpert/Static/css/style.css
+++ b/DCVExpert/Static/css/style.css
@@ -65,13 +65,60 @@ nav {
 	opacity: 0.75;
 }
 
-.buttons button {
+.buttons a {
     margin-left: 30px;
     padding: 10px 20px;
     border: none;
     cursor: pointer;
     color: #f8f9fa;
     font-size: 95%;
+    text-decoration: none;
+    /* position: relative; */
+}
+.buttons {
+    position: relative;
+}
+
+.login-window {
+    display: none; /* Ascunde fereastra inițial */
+    position: absolute;
+    top: 60px; /* Plasează fereastra sub navbar */
+    left: 0;
+    width: 300px; /* Lățimea feronetei */
+    background-color: #f1f1f1; /* Culoare de fundal */
+    border: 1px solid #ccc; /* Bordură pentru fereastră */
+    padding: 20px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1); /* Umbra pentru efect */
+    z-index: 10;
+    border-radius: 5px;
+}
+
+/* Fereastra devine vizibilă atunci când cursorul este pe butonul Login */
+.login:hover + .login-window {
+    display: block;
+}
+
+/* Stiluri pentru input și butonul din formular */
+.login-window input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+}
+
+.login-window button {
+    width: 100%;
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.login-window button:hover {
+    background-color: #45a049;
 }
 
 .login {
