--- a/DCVExpert/templates/DCVExpert/products.html
+++ b/DCVExpert/templates/DCVExpert/products.html
@@ -20,8 +20,22 @@
                 <li><a href="#">Despre Noi</a></li>
             </ul>
             <div class="buttons">
-                <button class="login">Login</button>
-                <button class="signup">Sign In</button>
+                <a href="#" class="login">
+                    Login
+                </a>
+                <div class="login-window">
+                    <form action="{% url 'home' %}" method="POST">
+                        {% comment %} {% csrf_token %} {% endcomment %}
+                        <label for="username">Username</label>
+                        <input type="text" id="username" name="username" required><br><br>
+                        <label for="password">Password</label>
+                        <input type="password" id="password" name="password" required><br><br>
+                        <button type="submit">Login</button>
+                    </form>
+                </div>
+                <a href="#" class="login">
+                    Sign In
+                </a>
             </div>
         </nav>
     </header>
@@ -45,24 +59,24 @@
     </section>
     <section class="courses_section">
         <div class="Courses">
+            {% for Cours in courses %}
             <div class="Cours">
                 <div class="cours_img">
-                    <img src="./img/mathemetic/math_3.jpg" alt="Gourse groupe" class="cours_png">
+                    <img src="{{ Cours.photo.url }}" alt="Gourse groupe" class="cours_head_png">
                 </div>
-                <h3 class="cours_nam">Lorem, ipsum dolor.</h3>
-                <p class="cours_description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate
-                    laborum rem doloremque ad qui? Perferendis reprehenderit dolorum quaerat beatae nihil!</p>
+                <h3 class="cours_nam">{{ Cours.name }}</h3>
+                <p class="cours_description">{{ Cours.about.short_description }}</p>
                 <div class="cours_price">
-                    <p class="old_price">20 Lei</p>
-                    <p class="actual_price">10 Lei</p>
+                    <p class="old_price">{{ Cours.price.old_price }}</p>
+                    <p class="actual_price">{{ Cours.price.new_price }}</p>
                 </div>
                 <div class="cours_details">
-                    <img src="./img/course_detale_icons/icon akar-icons-calendar.png" alt="Clock_icon"
+                    <img src="{% static 'img/course_detale_icons/icon akar-icons-calendar.png' %}" alt="Clock_icon"
                         class="cours_png">
-                    <p class="cours_duration">15h 30min</p>
-                    <img src="./img/course_detale_icons/icon ant-design-area-chart-outlined.png" alt="chart_icon"
+                    <p class="cours_duration">{{ Cours.about.duration }}</p>
+                    <img src="{% static 'img/course_detale_icons/icon ant-design-area-chart-outlined.png' %}" alt="chart_icon"
                         class="cours_png">
-                    <p class="cours_lesson_count">10 Lessons</p>
+                    <p class="cours_lesson_count">{{ Cours.about.lesson_count }} Lectii</p>
                     <!-- <img src="./img/course_detale_icons/icon carbon-chart-area-smooth.png" alt="chart_area_icon"
                         class="cours_png">
                     <p class="cours_progress">Progress</p> -->
@@ -70,131 +84,7 @@
                 <a href="./product.html" class="cours_learn_more">MAI MULTE DETALII</a>
                 <div class="mar_botom"></div>
             </div>
-            <div class="Cours">
-                <div class="cours_img">
-                    <img src="./img/it_cours/it_1.jpg" alt="Gourse groupe" class="cours_png">
-                </div>
-                <h3 class="cours_nam">Lorem, ipsum dolor.</h3>
-                <p class="cours_description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate
-                    laborum rem doloremque ad qui? Perferendis reprehenderit dolorum quaerat beatae nihil!</p>
-                <div class="cours_price">
-                    <p class="old_price">20 Lei</p>
-                    <p class="actual_price">10 Lei</p>
-                </div>
-                <div class="cours_details">
-                    <img src="./img/course_detale_icons/icon akar-icons-calendar.png" alt="Clock_icon"
-                        class="cours_png">
-                    <p class="cours_duration">15h 30min</p>
-                    <img src="./img/course_detale_icons/icon ant-design-area-chart-outlined.png" alt="chart_icon"
-                        class="cours_png">
-                    <p class="cours_lesson_count">10 Lessons</p>
-                    <!-- <img src="./img/course_detale_icons/icon carbon-chart-area-smooth.png" alt="chart_area_icon" -->
-                        <!-- class="cours_png"> -->
-                    <!-- <p hidden class="cours_progress">Progress</p> -->
-                </div>
-                <a href="#2" class="cours_learn_more">MAI MULTE DETALII</a>
-                <div class="mar_botom"></div>
-            </div>
-            <div class="Cours">
-                <div class="cours_img">
-                    <img src="./img/desaign/disaign_1.jpg" alt="Gourse groupe" class="cours_png">
-                </div>
-                <h3 class="cours_nam">Lorem, ipsum dolor.</h3>
-                <p class="cours_description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate
-                    laborum rem doloremque ad qui? Perferendis reprehenderit dolorum quaerat beatae nihil!</p>
-                <div class="cours_price">
-                    <p class="old_price">20 Lei</p>
-                    <p class="actual_price">10 Lei</p>
-                </div>
-                <div class="cours_details">
-                    <img src="./img/course_detale_icons/icon akar-icons-calendar.png" alt="Clock_icon"
-                        class="cours_png">
-                    <p class="cours_duration">15h 30min</p>
-                    <img src="./img/course_detale_icons/icon ant-design-area-chart-outlined.png" alt="chart_icon"
-                        class="cours_png">
-                    <p class="cours_lesson_count">10 Lessons</p>
-                    <!-- <img src="./img/course_detale_icons/icon carbon-chart-area-smooth.png" alt="chart_area_icon"
-                        class="cours_png">
-                    <p class="cours_progress">Progress</p> -->
-                </div>
-                <a href="#2" class="cours_learn_more">MAI MULTE DETALII</a>
-                <div class="mar_botom"></div>
-            </div>
-            <div class="Cours">
-                <div class="cours_img">
-                    <img src="./img/it_cours/it_2.webp" alt="Gourse groupe" class="cours_png">
-                </div>
-                <h3 class="cours_nam">Lorem, ipsum dolor.</h3>
-                <p class="cours_description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate
-                    laborum rem doloremque ad qui? Perferendis reprehenderit dolorum quaerat beatae nihil!</p>
-                <div class="cours_price">
-                    <p class="old_price">20 Lei</p>
-                    <p class="actual_price">10 Lei</p>
-                </div>
-                <div class="cours_details">
-                    <img src="./img/course_detale_icons/icon akar-icons-calendar.png" alt="Clock_icon"
-                        class="cours_png">
-                    <p class="cours_duration">15h 30min</p>
-                    <img src="./img/course_detale_icons/icon ant-design-area-chart-outlined.png" alt="chart_icon"
-                        class="cours_png">
-                    <p class="cours_lesson_count">10 Lessons</p>
-                    <!-- <img src="./img/course_detale_icons/icon carbon-chart-area-smooth.png" alt="chart_area_icon"
-                        class="cours_png">
-                    <p class="cours_progress">Progress</p> -->
-                </div>
-                <a href="#2" class="cours_learn_more">MAI MULTE DETALII</a>
-                <div class="mar_botom"></div>
-            </div>
-            <div class="Cours">
-                <div class="cours_img">
-                    <img src="./img/desaign/disaighn_2.jpeg" alt="Gourse groupe" class="cours_png">
-                </div>
-                <h3 class="cours_nam">Lorem, ipsum dolor.</h3>
-                <p class="cours_description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate
-                    laborum rem doloremque ad qui? Perferendis reprehenderit dolorum quaerat beatae nihil!</p>
-                <div class="cours_price">
-                    <p class="old_price">20 Lei</p>
-                    <p class="actual_price">10 Lei</p>
-                </div>
-                <div class="cours_details">
-                    <img src="./img/course_detale_icons/icon akar-icons-calendar.png" alt="Clock_icon"
-                        class="cours_png">
-                    <p class="cours_duration">15h 30min</p>
-                    <img src="./img/course_detale_icons/icon ant-design-area-chart-outlined.png" alt="chart_icon"
-                        class="cours_png">
-                    <p class="cours_lesson_count">10 Lessons</p>
-                    <!-- <img src="./img/course_detale_icons/icon carbon-chart-area-smooth.png" alt="chart_area_icon"
-                        class="cours_png">
-                    <p class="cours_progress">Progress</p> -->
-                </div>
-                <a href="#2" class="cours_learn_more">MAI MULTE DETALII</a>
-                <div class="mar_botom"></div>
-            </div>
-            <div class="Cours">
-                <div class="cours_img">
-                    <img src="./img/mathemetic/math_2.avif" alt="Gourse groupe" class="cours_png">
-                </div>
-                <h3 class="cours_nam">Lorem, ipsum dolor.</h3>
-                <p class="cours_description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate
-                    laborum rem doloremque ad qui? Perferendis reprehenderit dolorum quaerat beatae nihil!</p>
-                <div class="cours_price">
-                    <p class="old_price">20 Lei</p>
-                    <p class="actual_price">10 Lei</p>
-                </div>
-                <div class="cours_details">
-                    <img src="./img/course_detale_icons/icon akar-icons-calendar.png" alt="Clock_icon"
-                        class="cours_png">
-                    <p class="cours_duration">15h 30min</p>
-                    <img src="./img/course_detale_icons/icon ant-design-area-chart-outlined.png" alt="chart_icon"
-                        class="cours_png">
-                    <p class="cours_lesson_count">10 Lessons</p>
-                    <!-- <img src="./img/course_detale_icons/icon carbon-chart-area-smooth.png" alt="chart_area_icon"
-                        class="cours_png">
-                    <p class="cours_progress">Progress</p> -->
-                </div>
-                <a href="#2" class="cours_learn_more">MAI MULTE DETALII</a>
-                <div class="mar_botom"></div>
-            </div>
+            {% endfor %}
         </div>
     </section>
     <footer class="footer">
@@ -247,6 +137,28 @@
         <div class="footer_bottom">
             <p>&copy; 2025 All Rights Reserved</p>
         </div>
-    </footer>    
+    </footer>
+    <script>
+        // Detectează click-ul pe document
+        document.addEventListener('click', function(event) {
+            var loginButton = document.querySelector('.login'); // Butonul de login
+            var loginWindow = document.querySelector('.login-window'); // Fereastra de login
+
+            // Verifică dacă click-ul nu a avut loc pe butonul Login sau fereastra Login
+            if (!loginButton.contains(event.target) && !loginWindow.contains(event.target)) {
+                loginWindow.style.display = 'none'; // Ascunde fereastra
+            }
+        });
+
+        // Dezvăluie fereastra când cursorul este pe butonul Login sau pe fereastra de login
+        document.querySelector('.login').addEventListener('mouseover', function() {
+            document.querySelector('.login-window').style.display = 'block';
+        });
+
+        document.querySelector('.login-window').addEventListener('mouseover', function() {
+            document.querySelector('.login-window').style.display = 'block';
+        });
+
+    </script>   
 </body>
 </html>
