--- a/DCVExpert/Static/css/style.css
+++ b/DCVExpert/Static/css/style.css
@@ -385,20 +385,34 @@ margin-bottom: 40px;
     margin-bottom: 20px;   
 }
 .cours_img {
-    width: 400px;  /* Fixează lățimea */
-    height: 282px; /* Fixează înălțimea */
+	margin: 0 ;
+    width: auto;  /* Fixează lățimea */
+    height: 250px ; /* Fixează înălțimea */
     /* border: 1px solid; */
-    display: flex; /* Centrează imaginea dacă e necesar */
-    justify-content: center;
-    align-items: center;
-    overflow: hidden; /* Ascunde părțile în exces */
+    /* display: flex;  Centrează imaginea dacă e necesar */
+    /* justify-content: center; */
+    /* align-items: center; */
+     overflow: hidden; 
+    /* position: relative; */
+    /* align-items: flex-start; */
+    top:0;
+    left:0;
 }
 
-.cours_png{
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Face ca imaginea să acopere tot div-ul fără distorsiuni */  display: block;
+.cours_head_png{
+    /* position: absolute; */
+    top: 0;
+    left: 0;
+	width: 100%;
+    height: 250px;
+	/* margin: 0 auto; */
+    margin: 0;
+    padding: 0;
+    object-fit: cover; /* Face ca imaginea să acopere tot div-ul fără distorsiuni */  
     display: block;
+    /* padding-right: 15px; */
+    /* margin-left: 0px; */
+    /* margin-right: 0px; */
 }
 .cours_learn_more{
     border: 1px solid rgb(126, 124, 124);
