--- a/DCVExpert/templates/DCVExpert/products.html
+++ b/DCVExpert/templates/DCVExpert/products.html
@@ -31,7 +31,7 @@
                     <img src="{{ Cours.photo.url }}" alt="Gourse groupe" class="cours_head_png">
                 </div>
                 <h3 class="cours_nam">{{ Cours.name }}</h3>
-                <p class="cours_description">{{ Cours.about.short_description }}</p>
+                <p class="cours_description">{{ Cours.about.short_description |slice:":227" }}...</p>
                 <div class="cours_price">
                     <p class="old_price">{{ Cours.price.old_price }}</p>
                     <p class="actual_price">{{ Cours.price.new_price }}</p>
